fix event page center align

--- a/themes/navhub-v2/static/css/sass/nav.scss
+++ b/themes/navhub-v2/static/css/sass/nav.scss
@@ -122,8 +122,11 @@ a:focus {
 
   }
   &.two-col {
-    grid-gap: 30px 50px;
+    //grid-gap: 30px 50px;
     grid-template-columns: repeat(2, minmax(400px,600px));
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     @media (max-width: 880px) {
       grid-template-columns: minmax(300px,600px);
     }
